Added and changed main content to flow better on the page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
                 <p>Matches made - <span id="matches-completed">0</span>/8</p>
                 <p>Difficulty Completed - <span id="difficulty-setting-review">Easy</span></p>
                 <p class="total-score-message">Total Score - <span id="total-score">0</span></p>
-                <p></p>
             </div>
             <br>
             <button id="close-overlay" onclick="restartGame()">Close and Restart the Game!</button>
@@ -42,27 +41,21 @@
                     <div class="welcome">
                         <h2>What is it?</h2>
                         <p> Great question. This isn't your average pairs game, oh no no. Here you'll have you use
-                            every bit of your
-                            memory based
-                            pair matching skills, but you'll also need to call upon your film based trivia
+                            every bit of your memory based pair matching skills, but you'll also need to call upon your film based trivia
                             knowledge.</p>
                         <br>
                         <h2>How to Play </h2>
-
                         <p>All you have to do it match the film quote to the film. Easy.
-
-                            Click on any of the cards to reveal the quote or image behind it. Then try to find the
-                            matching film or
-                            quote.
-                            The game is timed and you'll receive bonus points for how quickly you complete the game.
-                            Be careful though, you'll also lose marks depending on how many attempts you take.
-                        </p>
+                            Turn any of the cards over to reveal the quote or image behind it, then try to find the
+                            matching film or quote.</p>
+                        <br>
+                        <p>The game is timed and you'll receive a score multiplyer for how quickly you complete the game.</p>
                         <br>
                         <h3>Choose your difficulty!</h3>
                         <div class="difficulty-settings">
-                            <button class="difficulty-button level active">Easy</button>
-                            <button class="difficulty-button level">Medium</button>
-                            <button class="difficulty-button level">Hard</button>
+                            <button class="difficulty-button active">Easy</button>
+                            <button class="difficulty-button">Medium</button>
+                            <button class="difficulty-button">Hard</button>
                         </div>
                         <button id="restart-button" onclick="restartGame()">Restart the Game</button>
                     </div>
