Added 'alt' to all of the images

--- a/index.html
+++ b/index.html
@@ -75,83 +75,83 @@
                         </div>
 
                         <div class="card" data-framework="terminator">
-                            <img class="card-front" src="assets/images/card-ill-be-back.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/card-ill-be-back.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="terminator">
-                            <img class="card-front" src="assets/images/terminator.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/terminator.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="300">
-                            <img class="card-front" src="assets/images/300.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/300.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="300">
-                            <img class="card-front" src="assets/images/this-is-sparta.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/this-is-sparta.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="nemo">
-                            <img class="card-front" src="assets/images/nemo.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/nemo.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="nemo">
-                            <img class="card-front" src="assets/images/keep-swimming.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/keep-swimming.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="zoolander">
-                            <img class="card-front" src="assets/images/center-for-ants.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/center-for-ants.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="zoolander">
-                            <img class="card-front" src="assets/images/zoolander.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/zoolander.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="spider-man">
-                            <img class="card-front" src="assets/images/spider-man.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/spider-man.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="spider-man">
-                            <img class="card-front" src="assets/images/great-responsibility.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/great-responsibility.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="hunger-games">
-                            <img class="card-front" src="assets/images/hunger-games.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/hunger-games.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="hunger-games">
-                            <img class="card-front" src="assets/images/volunteer-as-tribute.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/volunteer-as-tribute.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="elf">
-                            <img class="card-front" src="assets/images/elf.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/elf.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="elf">
-                            <img class="card-front" src="assets/images/throne-of-lies.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/throne-of-lies.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="pulp-fiction">
-                            <img class="card-front" src="assets/images/pulp-fiction.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/pulp-fiction.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
 
                         <div class="card" data-framework="pulp-fiction">
-                            <img class="card-front" src="assets/images/royale-with-cheese.png">
-                            <img class="card-back" src="assets/images/card-back.png">
+                            <img class="card-front" src="assets/images/royale-with-cheese.png" alt="card">
+                            <img class="card-back" src="assets/images/card-back.png" alt="card">
                         </div>
                     </div>
                 </div>
