Added 'onclick' actions to difficulty buttons

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                         <br>
                         <h3>Choose your difficulty!</h3>
                         <div class="difficulty-settings">
-                            <button class="difficulty-button active">Easy</button>
-                            <button class="difficulty-button">Medium</button>
-                            <button class="difficulty-button">Hard</button>
+                            <button id="easy-button" class="difficulty-button" onclick="difficultySettingEasy()">Easy</button>
+                            <button id="medium-button" class="difficulty-button" onclick="difficultySettingMedium()">Medium</button>
+                            <button id="hard-button" class="difficulty-button active" onclick="difficultySettingHard()">Hard</button>
                         </div>
                         <button id="restart-button" onclick="restartGame()">Restart the Game</button>
                     </div>
