--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
                 <p>Time - <span id="time-taken">00:00</span></p>
                 <p class="time-bonus-text">Your time gave you a <span id="time-bonus">x1.2</span> bonus!</p>
                 <p>Matches made - <span id="matches-completed">0</span>/8</p>
-                <p>Difficulty Completed - <span id="difficulty-setting-review">Easy</span></p>
                 <p class="total-score-message">Total Score - <span id="total-score">0</span></p>
             </div>
             <br>
@@ -49,14 +48,8 @@
                             Turn any of the cards over to reveal the quote or image behind it, then try to find the
                             matching film or quote.</p>
                         <br>
-                        <p>The game is timed and you'll receive a score multiplyer for how quickly you complete the game.</p>
+                        <p>The game is timed and you'll receive a score multiplyer depending on how quickly you complete the game.</p>
                         <br>
-                        <h3>Choose your difficulty!</h3>
-                        <div class="difficulty-settings">
-                            <button id="easy-button" class="difficulty-button" onclick="difficultySettingEasy()">Easy</button>
-                            <button id="medium-button" class="difficulty-button" onclick="difficultySettingMedium()">Medium</button>
-                            <button id="hard-button" class="difficulty-button active" onclick="difficultySettingHard()">Hard</button>
-                        </div>
                         <button id="restart-button" onclick="restartGame()">Restart the Game</button>
                     </div>
 
