Fixed grammatical error in the content. Added further instructions

--- a/index.html
+++ b/index.html
@@ -39,17 +39,18 @@
                 <div class="content">
                     <div class="welcome">
                         <h2>What is it?</h2>
-                        <p> Great question. This isn't your average pairs game, oh no no. Here you'll have you use
-                            every bit of your memory based pair matching skills, but you'll also need to call upon your film based trivia
+                        <p> Great question. This isn't your average pairs game. Here you'll have you use
+                            every bit of your memory based pair matching skills, as well as your film based trivia
                             knowledge.</p>
                         <br>
                         <h2>How to Play </h2>
-                        <p>All you have to do it match the film quote to the film. Easy.
+                        <p>All you have to do is match the film quote to the film. Easy.
                             Turn any of the cards over to reveal the quote or image behind it, then try to find the
                             matching film or quote.</p>
                         <br>
                         <p>The game is timed and you'll receive a score multiplyer depending on how quickly you complete the game.</p>
                         <br>
+                        <p>If you get stuck at any point or want to reset and have another go, click the button below to re-shuffle the cards.</p>
                         <button id="restart-button" onclick="restartGame()">Restart the Game</button>
                     </div>
 
