Added function notes to complete

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="total-score-message">Total Score - <span id="total-score">0</span></p>
             </div>
             <br>
-            <button id="close-overlay-button" onclick="restartGame()">Close and Restart the Game!</button>
+            <button id="close-overlay-button" onclick="startGame()">Close and Restart the Game!</button>
         </div>
     </div>
     <div class="stars">
