Removed restart game button

--- a/index.html
+++ b/index.html
@@ -50,9 +50,8 @@
                         <br>
                         <p>The game is timed and you'll receive a score multiplyer depending on how quickly you complete the game.</p>
                         <br>
-                        <p>If you get stuck at any point or want to reset and have another go, click the button below to re-shuffle the cards.</p>
+                        <p>If you get stuck at any point or want to reshuffle the cards and have another go, click the button below.</p>
                         <button class="game-button" onclick="startGame()">Shuffle the Cards</button>
-                        <button class="game-button" onclick="restartGame()">Restart the Game</button>
                     </div>
 
                     <div id="game-container">
